--- a/JoyToy_Webseite/styles.css
+++ b/JoyToy_Webseite/styles.css
@@ -18,7 +18,7 @@ body
 {
     background-color: var(--bg);
     color: var(--contentDark);
-    display:grid;
+    display: grid;
     grid-template-columns: 10% 1fr 1fr 10%;
     grid-template-rows: 13vh 5vh 1fr 1fr 1fr 12vh;
     grid-template-areas:
@@ -27,7 +27,6 @@ body
     ". main ."
     ". main ."
     "footer footer footer footer";
-    height: 100vh;
     font-size: 1.6rem;
 }
 
@@ -85,7 +84,7 @@ header
             {
                 background-color: transparent;
                 color: var(--contentDark);
-                border: solid 2.5px;
+                border: solid 2.5px var(--contentDark);
                 border-radius: 30px;
                 padding: 0.5rem;
                 margin: 1rem;
@@ -95,7 +94,7 @@ header
 nav
 {
     grid-area: nav;
-    background-color: green;
+    background-color: rgb(55, 43, 223) ;
     grid-column: 2/4;
     grid-row: 2/3;
     display: flex;
@@ -118,10 +117,30 @@ nav ul li
 
 nav ul li a
 {
-    color: var(--contentDark);
+    color: #eee;;
     font-size: 2rem;
     font-weight: bold;
     text-decoration: none;
+}
+
+#wl::before
+{
+    font-family: "Font Awesome 5 Free";
+    content: "\f004";
+    color: #eee;
+    font-size: 2.5rem;
+    font-weight: 900;
+    margin-right: 1rem;
+}
+
+#wk::before
+{
+    font-family: "Font Awesome 5 Free";
+    content: "\f290";
+    color: #eee;
+    font-size: 2.5rem;
+    font-weight: 900;
+    margin-right: 1rem;
 }
 
 main
@@ -136,13 +155,72 @@ main
 footer
 {
     grid-area: footer;
-    grid-column: 1/5;
+    grid-column: 1/6;
     
 }
 
-/* Ab Hier arbeiten*/
+    #footer_an
+    {
+        grid-row: 1/5;
+    }
 
-section
+/* Shop Sections */
+
+.s_main_content
 {
-
+    display: grid;
+    grid-column: 2/4;
+    grid-rows: 3/6;
 }
+
+.s_main_section
+{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: repeat(3, 1fr);
+    grid-template-areas:
+    "artikel1 artikel2"
+    "artikel3 artikel4"
+    "artikel5 artikel6";
+    padding: 2rem;
+    gap: 15px;
+    row-gap: 30px;
+}
+    .version
+    {
+        width: 100%;
+        height: 90%;
+        border: solid 1px;
+    }
+
+        input[id="buy"]
+        {
+            width: 5rem;
+            height: 2.5rem;
+        }
+
+        #wk_in, #wl_in
+        {
+            background-color: transparent;
+            color: var(--contentDark);
+            border: solid 2.5px var(--contentDark);
+            border-radius: 30px;
+            padding: 0.5rem;
+            margin: 1rem;
+            font-size: 1.7rem;
+            font-weight: bolder;
+        }
+
+
+    #artikel1{grid-area: artikel1;}
+    #artikel2{grid-area: artikel2;}
+    #artikel3{grid-area: artikel3;}
+    #artikel4{grid-area: artikel4;}
+    #artikel5{grid-area: artikel5;}
+    #artikel6{grid-area: artikel6;}
+
+
+    section div img/*[name="ninjago"]*/
+    {
+        width: 250px;
+    }
