--- a/JoyToy_Webseite/styles.css
+++ b/JoyToy_Webseite/styles.css
@@ -1,143 +1,213 @@
-:root
-{
-    font-size: 62.5%;
-    --bg: #FFFAE3;
-    --contentDark:#473F33;
-    --icon: #F37748;
+:root {
+  font-size: 62.5%;
+  --bg: #fffae3;
+  --contentDark: #473f33;
+  --icon: #f37748;
 }
 
-*
-{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    text-decoration: none;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  text-decoration: none;
 }
 
-body
-{
-    background-color: var(--bg);
-    color: var(--contentDark);
-    display:grid;
-    grid-template-columns: 10% 1fr 1fr 10%;
-    grid-template-rows: 13vh 5vh 1fr 1fr 1fr 12vh;
-    grid-template-areas:
+body {
+  background-color: var(--bg);
+  color: var(--contentDark);
+  display: grid;
+  grid-template-columns: 10% 1fr 1fr 10%;
+  grid-template-rows: 13vh 5vh 1fr 1fr 1fr 12vh;
+  grid-template-areas:
     "header header header header"
     ". nav nav ."
     ". main ."
     ". main ."
     "footer footer footer footer";
-    height: 100vh;
-    font-size: 1.6rem;
+  /* height: 100vh; */
+  font-size: 1.6rem;
 }
 
-header
-{
-    grid-area: header;
-    grid-column: 1/5;
-    grid-row: 1/2;
-    background-color: #ded;
+header {
+  grid-area: header;
+  grid-column: 1/5;
+  grid-row: 1/2;
+  background-color: #ded;
 }
 
-    .header_container
-    {
-        display: flex;
-        height: 100%;
-    }
-
-        .header_center
-        {
-            display: flex;
-            width: 80%;
-            justify-content: center;
-            align-items: flex-end;
-            padding: 0.3rem;
-        }
-
-            input[id="searchbar"]
-            {
-                width: 30rem;
-                height: 3rem;
-                margin: 1rem;
-                border-radius: 30px;
-            }
-
-            i
-            {
-                color: var(--icon);
-                margin: 1rem;
-                font-size: 3rem;
-            }
-
-        .header_right
-        {
-            display: flex;
-            justify-content: center;
-            align-items: flex-end;
-        }
-
-            button[id=login], button[id="register"]
-            {
-                background-color: transparent;
-                color: var(--contentDark);
-                border: solid 2.5px;
-                border-radius: 30px;
-                padding: 0.5rem;
-                margin: 1rem;
-                font-size: 1.7rem;
-                font-weight: bolder;
-            }
-nav
-{
-    grid-area: nav;
-    background-color: green;
-    grid-column: 2/4;
-    grid-row: 2/3;
-    display: flex;
-    align-items: center;
+.header_container {
+  display: flex;
+  height: 100%;
 }
 
-nav ul
-{
-    width: 100%;
-    display: flex;
-    
-    justify-content: center;
+.header_center {
+  display: flex;
+  width: 80%;
+  justify-content: center;
+  align-items: flex-end;
+  padding: 0.3rem;
 }
 
-nav ul li
-{
-    width: 13%;
-    list-style: none;
+input[id="searchbar"] {
+  width: 30rem;
+  height: 3rem;
+  margin: 1rem;
+  border-radius: 30px;
 }
 
-nav ul li a
-{
-    color: var(--contentDark);
-    font-size: 2rem;
-    font-weight: bold;
-    text-decoration: none;
+i {
+  color: var(--icon);
+  margin: 1rem;
+  font-size: 3rem;
 }
 
-main
-{
-    grid-area: main;
-    grid-column: 2/4;
-    grid-row: 3/7;
-    background-color: gray;
+.header_reght {
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
 }
 
+button[id="login"],
+button[id="register"] {
+  background-color: transparent;
+  color: var(--contentDark);
+  border: solid 2.5px;
+  border-radius: 30px;
+  padding: 0.5rem;
+  margin: 1rem;
+  font-size: 1.7rem;
+  font-weight: bolder;
+}
+nav {
+  grid-area: nav;
+  background-color: green;
+  grid-column: 2/4;
+  grid-row: 2/3;
+  display: flex;
+  align-items: center;
+}
 
-footer
-{
-    grid-area: footer;
-    grid-column: 1/5;
-    
+nav ul {
+  width: 100%;
+  display: flex;
+
+  justify-content: center;
+}
+
+nav ul li {
+  width: 13%;
+  list-style: none;
+}
+
+nav ul li a {
+  color: var(--contentDark);
+  font-size: 2rem;
+  font-weight: bold;
+  text-decoration: none;
+}
+
+main {
+  grid-area: main;
+  grid-column: 2/4;
+  grid-row: 3/7;
+  background-color: gray;
+}
+
+footer {
+  grid-area: footer;
+  grid-column: 1/5;
 }
 
 /* Ab Hier arbeiten*/
 
-section
-{
+.reg-main {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
 
+  grid-template-areas: "reg-sec-links reg-sec-reght";
+}
+.reg-img {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(225deg, #ffcc1d, #0b4619, #fd0101);
+  z-index: 1;
+  mix-blend-mode: hard-light;
+}
+
+.reg-sec-links {
+  width: 100%;
+  height: 100%;
+  grid-area: 1/1/2/2;
+  background: linear-gradient(
+    225deg,
+    rgba(240, 190, 27, 0.973),
+    #19d54efd,
+    #e61515
+  );
+}
+
+.reg-sec-right {
+  grid-area: reg-sec-reght;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  flex-direction: column;
+  background: linear-gradient(225deg, #f0be1be3, #48c26bb3, #c73131ea);
+}
+
+.reg-form label {
+  font-size: 2rem;
+  font-family: "Permanent Marker", cursive;
+
+  color: rgb(61, 51, 51);
+}
+.reg-form input {
+  width: 20em;
+  height: 3em;
+  border-radius: 50px;
+  padding: rem;
+  margin: 1em;
+  background: rgb(216, 215, 215);
+  box-shadow: 1px 2px 2px rgb(47, 43, 43);
+}
+.reg-form input:hover {
+  background-color: #bdca3c;
+}
+#reg-h3 {
+  padding: 2em;
+  font-size: 2rem;
+  font-family: "Permanent Marker", cursive;
+  color: rgb(61, 50, 50);
+}
+
+.reg-checkbox {
+  font-size: 2rem;
+  font-family: "Permanent Marker", cursive;
+  color: rgb(51, 42, 42);
+}
+.reg-i i {
+  padding-left: 1em;
+  padding-right: 1em;
+  border-radius: 50px;
+}
+#reg-btn {
+  font-size: 2rem;
+  width: 18em;
+  height: 3em;
+  border-radius: 50px;
+  padding: 2rem;
+  margin: 1em;
+  background: rgb(216, 215, 215);
+  box-shadow: 1px 2px 2px rgb(47, 43, 43);
+  background-color: #beb53c;
+  font-family: "Permanent Marker", cursive;
+}
+.reg-i i:hover {
+  color: rgb(35%, 69%, 44%);
+  background-color: rgb(74%, 71%, 24%);
+}
+#reg-btn:hover {
+  background-color: #f37748;
 }
