--- a/JoyToy_Webseite/styles.css
+++ b/JoyToy_Webseite/styles.css
@@ -71,7 +71,15 @@ header
                 margin: 1rem;
                 padding: 1rem;
                 border-radius: 30px;
+                background-color: transparent; 
+                transition: background-color 5s;
             }
+
+                input:focus
+                { 
+                    background-color: yellow;
+                    color: red; 
+                }
 
             i
             {
@@ -125,7 +133,7 @@ nav
 
             nav ul li a
             {
-                color: #eee;;
+                color: #eee;
                 font-size: 2rem;
                 font-weight: bold;
                 text-decoration: none;
@@ -134,6 +142,11 @@ nav
             #spacer
             {
                 width: 5%;
+            }
+
+            li a:hover
+            {
+                text-decoration: underline rgb(250, 37, 37);
             }
 
                 #wl::before
