--- a/JoyToy_Webseite/styles.css
+++ b/JoyToy_Webseite/styles.css
@@ -27,7 +27,7 @@ body
     ". main ."
     ". main ."
     "footer footer footer footer";
-    height: 100vh;
+    /* height: 100vh; */
     font-size: 1.6rem;
 }
 
@@ -90,7 +90,8 @@ header
 nav
 {
     grid-area: nav;
-    background-color: green;
+    background-color: rgb(55, 43, 223);
+    
     grid-column: 2/4;
     grid-row: 2/3;
     display: flex;
@@ -101,19 +102,20 @@ nav ul
 {
     width: 100%;
     display: flex;
-    
+  
     justify-content: center;
 }
 
 nav ul li
 {
+    
     width: 13%;
     list-style: none;
 }
 
 nav ul li a
 {
-    color: var(--contentDark);
+    color: #eee;
     font-size: 2rem;
     font-weight: bold;
     text-decoration: none;
@@ -124,7 +126,7 @@ main
     grid-area: main;
     grid-column: 2/4;
     grid-row: 3/7;
-    background-color: gray;
+    
 }
 
 
@@ -136,8 +138,75 @@ footer
 }
 
 /* Ab Hier arbeiten*/
+ .start_seite{
+    background-color: white;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: 23% 28% 28% 23%;
+    grid-gap: 15px;
+    padding: 15px;
+    margin: 5px 0;
 
-section
+}
+.sec1
 {
+    
+    grid-area:1/1/2/4 ;
 
+}
+.sec2{
+    grid-area:4/1/5/4 ;
+
+}
+.div1{
+    grid-area:1/1/2/2;
+    
+}
+h3, p, .sty{
+    text-align: center;
+    margin: 0.3rem;
+}
+.sty{
+    background-color: rgb(250, 217, 217);
+    border: 1px solid black;
+    border-radius: 20px;
+    padding: 0.7rem;
+    color: black;
+    font-size: 20px;
+    text-align: center;
+    font-weight: bold;
+ 
+}
+.div2{
+    grid-area:2/1/3/2;
+    font-weight: bold;
+
+}
+.div3{
+    grid-area:3/1/4/2;
+    margin-top: 2rem;
+  text-align: center;
+}
+.div4{
+    grid-area:2/2/3/3;
+    font-weight: bold;
+
+}
+.div5{
+    grid-area:3/2/4/3;
+    margin-top: 2rem;
+  text-align: center;
+}
+.div6{
+    grid-area:2/3/3/4;
+    font-weight: bold;
+
+}
+.div7{
+    grid-area:3/3/4/4;
+    margin-top: 2rem;
+  text-align: center;
+}
+.sec3{
+    grid-area:3/1/4/4;  
 }
