--- a/JoyToy_Webseite/styles.css
+++ b/JoyToy_Webseite/styles.css
@@ -130,7 +130,7 @@ footer {
   object-fit: cover;
   width: 100%;
   height: 100%;
-  background: linear-gradient(225deg, #ffcc1d, #0b4619, #fd0101);
+ 
   z-index: 1;
   mix-blend-mode: hard-light;
 }
@@ -141,9 +141,9 @@ footer {
   grid-area: 1/1/2/2;
   background: linear-gradient(
     225deg,
-    rgba(240, 190, 27, 0.973),
-    #19d54efd,
-    #e61515
+    rgba(240, 190, 27, 0.651),
+    #19d54e70,
+    #e61515dc
   );
 }
 
