--- a/JoyToy_Webseite/styles.css
+++ b/JoyToy_Webseite/styles.css
@@ -1,9 +1,10 @@
 :root
 {
     font-size: 62.5%;
-    --bg: #FFFAE3;
-    --contentDark:#473F33;
-    --icon: #F37748;
+    --bg: #fffae3;
+    --contentDark:#473f33;
+    --icon: #f37748;
+    --hf_bg: rgb(4, 2, 114);
 }
 
 *
@@ -27,7 +28,6 @@ body
     ". main ."
     ". main ."
     "footer footer footer footer";
-    /* height: 100vh; */
     font-size: 1.6rem;
 }
 
@@ -36,7 +36,7 @@ header
     grid-area: header;
     grid-column: 1/5;
     grid-row: 1/2;
-    background-color: #ded;
+    background-color: var(--hf_bg);
 }
 
     .header_container
@@ -71,6 +71,7 @@ header
                 font-size: 2rem;
                 margin: 1rem;
                 padding: 1rem;
+                border: var(--icon) solid;
                 border-radius: 30px;
                 background-color: transparent; 
                 transition: background-color 5s;
@@ -99,8 +100,8 @@ header
             button[id=login], button[id="register"]
             {
                 background-color: transparent;
-                color: var(--contentDark);
-                border: solid 2.5px var(--contentDark);
+                color: var(--icon);
+                border: solid 2.5px var(--icon);
                 border-radius: 30px;
                 padding: 0.5rem;
                 margin: 1rem;
@@ -110,8 +111,7 @@ header
 nav
 {
     grid-area: nav;
-    background-color: rgb(55, 43, 223);
-    
+    background-color: rgb(55, 43, 223) ;
     grid-column: 2/4;
     grid-row: 2/3;
     display: flex;
@@ -176,7 +176,6 @@ main
     grid-area: main;
     grid-column: 2/4;
     grid-row: 3/7;
-    
 }
 
 
@@ -184,81 +183,144 @@ footer
 {
     grid-area: footer;
     grid-column: 1/6;
-    
+    padding: 2rem;
+    border-top: solid #eee;
+    background-color: var(--hf_bg);
+    color: var(--icon);
+    font-size: 2rem;
 }
 
-/* Ab Hier arbeiten*/
-/* Mojdeh */
- .start_seite{
-    background-color: white;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: 23% 28% 28% 23%;
-    grid-gap: 15px;
-    padding: 15px;
-    margin: 5px 0;
+    #footer_an
+    {
+        grid-row: 1/5;
+        grid-row: 7/8;
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+    }
 
-}
-.sec1
+        footer ul li
+        {
+            list-style: none;
+        }
+
+            footer ul li a
+            {
+                color: #eee;
+                font-size: 2rem;
+                font-weight: bold;
+                text-decoration: none;
+            }
+
+/* Shop Sections */
+
+.s_main_content
 {
-    
-    grid-area:1/1/2/4 ;
+    display: grid;
+    grid-column: 2/4;
+    grid-row: 3/6;
+    background-color: rgb(253, 241, 218);
+}
 
+.s_main_section
+{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: repeat(3, 1fr);
+    grid-template-areas:
+    "artikel1 artikel2"
+    "artikel3 artikel4"
+    "artikel5 artikel6";
+    padding: 2rem;
+    gap: 15px;
+    row-gap: 30px;
 }
-.sec2{
-    grid-area:4/1/5/4 ;
 
+#artikel1,#artikel2,#artikel3,#artikel4,#artikel5,#artikel6
+{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-end;
+    background-color: #fff;
+    width: 100%;
+    height: 100%;
+    padding: 2.5rem;
+    border: solid 3px red;
 }
-.div1{
-    grid-area:1/1/2/2;
-    
-}
-h3, p, .sty{
-    text-align: center;
-    margin: 0.3rem;
-}
-.sty{
-    background-color: rgb(250, 217, 217);
-    border: 1px solid black;
-    border-radius: 20px;
-    padding: 0.7rem;
-    color: black;
-    font-size: 20px;
-    text-align: center;
-    font-weight: bold;
- 
-}
-.div2{
-    grid-area:2/1/3/2;
-    font-weight: bold;
 
-}
-.div3{
-    grid-area:3/1/4/2;
-    margin-top: 2rem;
-  text-align: center;
-}
-.div4{
-    grid-area:2/2/3/3;
-    font-weight: bold;
+    #artikel1 { grid-area: artikel1; }
+    #artikel2 { grid-area: artikel2; }
+    #artikel3 { grid-area: artikel3; }
+    #artikel4 { grid-area: artikel4; }
+    #artikel5 { grid-area: artikel5; }
+    #artikel6 { grid-area: artikel6; }
 
-}
-.div5{
-    grid-area:3/2/4/3;
-    margin-top: 2rem;
-  text-align: center;
-}
-.div6{
-    grid-area:2/3/3/4;
-    font-weight: bold;
+    .artikel_left
+    {
+        width: 49%;
+    }
 
-}
-.div7{
-    grid-area:3/3/4/4;
-    margin-top: 2rem;
-  text-align: center;
-}
-.sec3{
-    grid-area:3/1/4/4;  
-}
-/* Mojdeh */
+    .artikel_right
+    {
+        display: flex;
+        flex-wrap:wrap;
+        width: 49%;
+        padding: 2.5rem;
+    }
+
+    .artikel_right_bot1
+    {
+        width: 30%;
+        padding: 0.5rem;
+    }
+
+        input[id="buy"]
+        {
+            width: 5rem;
+            height: 2.5rem;
+            font-size: 2rem;
+            padding: 0.3rem;
+            margin: auto;
+        }
+
+    .artikel_right_bot2
+    {
+        display: flex;
+        flex-wrap: wrap;
+        width: 60%;
+        
+        text-align: center;
+    }
+
+        h3#preis
+        {
+            font-size: 3rem;
+            font-weight: bold;
+        }
+
+        #wk_in, #wl_in
+        {
+            background-color: transparent;
+            color: var(--contentDark);
+            border: solid 2.5px var(--contentDark);
+            border-radius: 30px;
+            padding: 0.5rem;
+            font-size: 1.7rem;
+            font-weight: bolder;
+            height: 3.5rem;
+        }
+
+    section div img/*[name="ninjago"]*/
+    {
+        width: 100%;
+        order: 1;
+    }
+
+    img[alt="Topseller"]
+    {
+        width: 80px;
+        height: 80px;
+        position: relative;
+        top: -70%;
+        right: - 5%;
+    }
